tests/ui/badoptions.stderr
error: unknown derive-adhoc option
  --> ui/badoptions.rs:15:22
   |
15 |     BadOptionsDriver with unknown option:
   |                      ^^^^

error: unknown value for `for`
  --> ui/badoptions.rs:19:26
   |
19 |     BadOptionsDriver for wombat:
   |                          ^^^^^^

error: expected driver kind union, but driver is struct (expected kind)
  --> ui/badoptions.rs:23:26
   |
23 |     BadOptionsDriver for union:
   |                          ^^^^^

error: expected driver kind union, but driver is struct (actual kind)
  --> ui/badoptions.rs:12:1
   |
12 |   struct BadOptionsDriver;
   |   ^^^^^^^^^^^^^^^^^^^^^^^^
...
22 | / derive_adhoc! {
23 | |     BadOptionsDriver for union:
24 | | }
   | |_- in this macro invocation
   |
   = note: this error originates in the macro `derive_adhoc_driver_BadOptionsDriver` which comes from the expansion of the macro `derive_adhoc` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected one of `!` or `::`, found `error`
  --> ui/badoptions.rs:32:12
   |
32 |     syntax error;
   |            ^^^^^ expected one of `!` or `::`
